--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,11 @@
 body{
     margin: 0; 
     padding: 0;
-    background-color: #8B4513
+    background-color: #8B4513;
+}
 
+@media (min-width: 992px) {
+    body{
+        overflow: hidden;
+    }
 }
