--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,21 +1,22 @@
 <main class="main">
     <section class="section-column">
         <img src="../../../assets/logo-white.png" alt="nordestina-burger">
-    <form class="form-login" (ngSubmit)="onSubmit()">
-        <p class="text-form">Adicione seus dados para começar:</p>
-        <div>
-            <input type="text" id="username-input" name="username" [(ngModel)]="username" placeholder="Nome de Usuário">
-        </div>
-        <div>
-            <input type="password" id="password-input" name="password" [(ngModel)]="password" placeholder="Senha">
-        </div>
-        <div>
-            <button type="submit" class="acessar-button">ENTRAR</button>
-        </div>
-    </form>
-
+        <form class="form-login" (ngSubmit)="onSubmit()">
+            <p class="text-form">Adicione seus dados para começar:</p>
+            <div>
+                <input type="text" id="username-input" name="username" [(ngModel)]="username" placeholder="Nome de Usuário" required>
+                <p class="error-message" *ngIf="showUsernameError">Por favor, insira um nome de usuário válido.</p>
+            </div>
+            <div>
+                <input type="email" id="email-input" name="email" [(ngModel)]="email" placeholder="E-mail" required>
+                <p class="error-message" *ngIf="showEmailError">Por favor, insira um e-mail válido.</p>
+            </div>
+            <div>
+                <input type="password" id="password-input" name="password" [(ngModel)]="password" placeholder="Senha" required>
+            </div>
+            <div>
+                <button type="submit" class="acessar-button">ENTRAR</button>
+            </div>
+        </form>
     </section>
-        
-    
 </main>
-
