--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -4,53 +4,33 @@
     </div>
     <section class="section-column">
         <h1 class="title">SELECIONE SEU PEDIDO</h1>
-        <div class="buttons-container">
-            <button class="filter-button" (click)="filter('Hamburgueres')">Hambúrgueres</button>
-            <button class="filter-button" (click)="filter('Café da Manhã')">Café da Manhã</button>
-            <button class="filter-button" (click)="filter('Bebidas')">Bebidas</button>
+        
+        <!-- Botões para selecionar os tipos de produtos -->
+        <div class="product-filters">
+            <button class="filter-button" (click)="selectFilter('Hamburgueres')">Hamburgueres</button>
+            <button class="filter-button" (click)="selectFilter('Café da Manhã')">Café da Manhã</button>
+            <button class="filter-button" (click)="selectFilter('Bebidas')">Bebidas</button>
         </div>
-        <div class="product-container" *ngIf="selectedFilter === 'Hamburgueres'">
-            <h2 class="product-title">Hambúrgueres</h2>
-            <div class="product" (click)="addItem(products[selectedFilter][0])">
-                <p class="product-name">CuscuzBurger</p>
-                <p class="product-price">R$ 20</p>
-            </div>
-        </div>
-        <div class="product-container" *ngIf="selectedFilter === 'Café da Manhã'">
-            <h2 class="product-title">Café da Manhã</h2>
-            <div class="product" (click)="addItem(products[selectedFilter][0])">
-                <p class="product-name">Cuscuz com Ovo</p>
-                <p class="product-price">R$ 15</p>
-            </div>
-            <div class="product02" (click)="addItem(products[selectedFilter][1])">
-                <p class="product-name">Tapioca</p>
-                <p class="product-price">R$ 20</p>
-            </div>
-            <div class="product03" (click)="addItem(products[selectedFilter][2])">
-                <p class="product-name">Tapioca</p>
-                <p class="product-price">R$ 20</p>
-            </div>
-        </div>
-        <div class="product-container" *ngIf="selectedFilter === 'Bebidas'">
-            <h2 class="product-title">Bebidas</h2>
-            <div class="product01" (click)="addItem(products[selectedFilter][0])">
-                <p class="product-name">Café</p>
-                <p class="product-price">R$ 5</p>
+
+        <!-- Listagem de produtos conforme filtro selecionado -->
+        <div *ngIf="selectedFilter">
+            <h2 class="product-title">{{ selectedFilter }}</h2>
+            <div class="product-container" *ngFor="let product of products[selectedFilter]">
+                <div class="product" (click)="addItem(product)">
+                    <p class="product-name">{{ product.name }}</p>
+                    <p class="product-price">R$ {{ product.price }}</p>
+                </div>
             </div>
         </div>
 
         <hr> <!-- Linha de separação -->
 
-
-
-
         <div class="order-summary" *ngIf="selectedFilter">
             <h2 class="summary-title">Resumo da Compra</h2>
-                    <!-- Nome do cliente -->
-                    <div class="client-name-container">
-                        <label for="clientName" class="client-name-label">Nome do Cliente:</label>
-                        <input type="text" id="clientName" [(ngModel)]="clientName" class="client-name-input" placeholder="Digite o nome do cliente">
-                       </div>
+            <div class="client-name-container">
+                <label for="clientName" class="client-name-label">Nome do Cliente:</label>
+                <input type="text" id="clientName" [(ngModel)]="clientName" class="client-name-input" placeholder="Digite o nome do cliente">
+            </div>
             <div *ngFor="let item of selectedItems">
                 <p class="item-name">{{ item.name }}</p>
                 <p class="item-quantity">Quantidade: {{ item.quantity }}</p>
@@ -60,5 +40,6 @@
             <p class="total">Total: R$ {{ calculateTotal() }}</p>
             <button class="send-button" (click)="sendOrder()">Enviar Pedido</button>
         </div>
+        <button class="button-back" (click)="goToLogin()">SAIR</button>
     </section>
 </main>
