--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,37 +1,37 @@
 <main class="main">
-    <div class="logo-one">
-      <img src="../../../assets/logo-white.png" alt="nordestina-burger">
-    </div>
+  <div class="logo-one">
+    <img src="../../../assets/logo-white.png" alt="nordestina-burger">
+  </div>
+   
     <section class="section-column">
       <h1 class="title">SELECIONE SEU PEDIDO</h1>
       <div class="product-filters">
-        <button class="filter-button" (click)="onClick('hamburgueres')">Hamburgueres</button>
-        <button class="filter-button" (click)="onClick('cafe da manha')">Café da Manhã</button>
-        <button class="filter-button" (click)="onClick('bebidas')">Bebidas</button>
+        <button class="filter-button" (click)="onClick('hamburgueres')">HAMBURGUERES</button>
+        <button class="filter-button" (click)="onClick('cafe da manha')">CAFÉ DA MANHÃ</button>
+        <button class="filter-button" (click)="onClick('bebidas')">BEBIDAS</button>
       </div>
   
       <ng-container *ngIf="items.length > 0">
         <!-- <h2 class="product-title">{{ type }}</h2> -->
         <div class="product-container" *ngFor="let product of items">
           <div class="product" (click)="moverItem(product)">
-            <p class="product-name">{{ product.name }}</p>
-            <p class="product-price">R$ {{ product.price }}</p>
+            <p class="product-name">{{ product.name }} R$ {{ product.price }}</p>
           </div>
         </div>
       </ng-container>
   
       <hr>
-      
+      <h2 class="summary-title">Resumo da Compra</h2>
+      <div class="nameClient">
+        <input type="text" placeholder="Nome do cliente">
+      </div>
       <div class="order-summary" *ngIf="destinoItems.length > 0">
-        <h2 class="summary-title">Resumo da Compra</h2>
-        <div class="nameClient">
-            <input type="text" placeholder="Nome do cliente">
-          </div>
-        <div *ngFor="let item of destinoItems">
+        
+        <div class="section-resume" *ngFor="let item of destinoItems">
           <p class="item-name">{{ item.name }}</p>
           <div class="quantity-control">
             <button class="quantity-button" (click)="decrementQuantity(item)">-</button>
-            <p class="item-quantity">{{ item.quantity }}</p>
+            <span class="item-quantity"> {{ item.quantity }}</span> 
             <button class="quantity-button" (click)="incrementQuantity(item)">+</button>
           </div>
           <p class="item-price">Valor: R$ {{ item.price }}</p>
