--- a/src/app/components/order/order.component.css
+++ b/src/app/components/order/order.component.css
@@ -1,150 +1,151 @@
-.main {
+
+
+
+body {
+  height: 100vh;
   display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
- /*  height: 90vh; */
-  color: #fff;
+  flex-direction: column;
+  background-color: #f0f0f0;
 }
 
+/* Estilos para a imagem do logotipo */
 .logo-one {
-  align-self: flex-start; /* Alinhar no canto superior esquerdo */
-  margin-bottom: 10px; /* Adicionei um espaçamento inferior */
+  text-align: center;
+  margin: 20px;
 }
 
 .logo-one img {
-  display: flex;
-  align-items: end;
-  max-width: 100%;
+  max-width: 231px; 
+  max-height: 215px; 
+  width: auto;
   height: auto;
 }
 
+/* Estilos para a barra de navegação */
+.nav-bar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+ 
+  padding: 10px 0;
+}
 
-.section-column {
+.nav-bar i{
+  color: blue;
+  width: 20px;
+}
+
+
+
+/* .nav-button:not(:last-child) {
+  margin-right: 10px;
+} */
+
+/* Estilos para a classe main */
+.main {
   flex: 1;
-  border-radius: 10px;
-  padding: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  gap: 5px;
 }
 
-.title, .summary-title {
-  margin-top: 0;
-  font-size: 34px;
-  margin-bottom: 30px;
-  padding: 0;
+
+.title {
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
-/* Estilos para os botões dos filtros */
 .product-filters {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
+  justify-content: center;
+  margin-bottom: 10px;
 }
 
 .filter-button {
   padding: 10px 20px;
-  background-color: #000;
+  border: none;
+  background-color: black;
   color: white;
-  border: 2px solid white;
   border-radius: 20px;
   cursor: pointer;
-  margin-bottom: 10px;
-  font-size: 20px;
+  margin: 0 10px;
 }
 
-.filter-button:hover {
-  background-color: #333;
-}
-
-/* Estilos para os produtos */
 .product-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .product {
-  align-items: center;
-  color: white;
-  border-radius: 20px;
-  padding: 5px;
-  margin: 5px;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
   cursor: pointer;
-  width: 249px;
-  background-color:rgba(0, 0, 0, 0.3) ;
-}
-
-.product:hover {
-  background-color: orange;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .product-name {
-  font-weight: 400;
-  color:white;
+  margin: 0;
+}
+
+.sections-container {
+  display: flex;
+  justify-content: space-between; /* Isso mantém as seções lado a lado */
+  align-items: flex-start; /* Isso alinha as seções ao topo */
+  gap: 20px;
+}
+
+.section-column {
+  flex: 1;
+  border-right: 1px solid #ccc;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
   text-align: center;
   
 }
 
-/* Estilos para o resumo da compra */
-.order-summary {
-  background-color: #f5f5f5;
-  border-radius: 10px;
+.section-right {
+  flex: 1;
+  border-right: 1px solid #ccc;
   padding: 20px;
-  margin-top: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+  
 }
 
+
+
+
+
+
+.summary-title {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
 
 .nameClient input {
-  text-align: center;
-  font-family: 'Righteous', cursive;
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.order-summary {
+  padding: 10px;
+  background-color: #f0f0f0;
   border-radius: 10px;
-  font-size: 20px;
-  padding: 15px;
-  color: black;
- 
 }
 
-.section-resume{
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  color: black;
-  gap: 15px;
-  font-size: 1.2rem;
-  
-}
-
-.quantity-button {
-
-
-  width: 30px;
-  color: white;
-
-  border: none;
-  border-radius: 10px;
-  background-color: #74432F;
-  font-size: 25px;
-
-}
-.item-remove {
-  background-color: #dc3545;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 5px 10px;
-}
-.total {
-  font-weight: bold;
-  margin-top: 10px;
-  color:black;
-}
 
 
 .item-name {
-display: flex;
-gap: 5px;
+  flex: 1;
   font-weight: bold;
 }
 
@@ -153,48 +154,67 @@ gap: 5px;
   align-items: center;
 }
 
-
+.quantity-button {
+  padding: 5px 10px;
+  border: none;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
 
 .item-quantity {
   margin: 0 10px;
 }
 
 .item-price {
-  color: #007bff;
+  margin: 0;
+  margin-right: 10px;
 }
 
-
-
-.item-remove:hover {
-  background-color: #c82333;
+.item-remove {
+  border: none;
+  background-color: transparent;
+  color: red;
+  cursor: pointer;
 }
 
-
+.total {
+  font-weight: bold;
+  margin-top: 10px;
+}
 
 .send-button {
-  background-color: #28a745;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
   padding: 10px 20px;
-  margin-top: 20px;
-}
-
-.send-button:hover {
-  background-color: #218838;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .button-back {
-  background-color: #6c757d;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
   padding: 10px 20px;
-  margin-top: 20px;
+  background-color: #ccc;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
-.button-back:hover {
-  background-color: #5a6268;
+/* Estilos para o botão de filtro selecionado */
+.filter-button.active {
+  background-color: white;
+  color: black;
 }
+
+
+
+/* .nav-bar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f0f0f0;
+  padding: 10px 0;
+}
+
+.nav-button:not(:last-child) {
+  margin-right: 10px;
+} */
