--- a/src/app/components/order/order.component.css
+++ b/src/app/components/order/order.component.css
@@ -1,59 +1,82 @@
 
-
-
-body {
-  height: 100vh;
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #f0f0f0;
 }
 
-/* Estilos para a imagem do logotipo */
-.logo-one {
-  text-align: center;
-  margin: 20px;
-}
-
-.logo-one img {
-  max-width: 231px; 
-  max-height: 215px; 
-  width: auto;
-  height: auto;
-}
-
-/* Estilos para a barra de navegação */
-.nav-bar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
- 
-  padding: 10px 0;
-}
-
-.nav-bar i{
-  color: blue;
-  width: 20px;
-}
-
-
-
-/* .nav-button:not(:last-child) {
-  margin-right: 10px;
-} */
-
-/* Estilos para a classe main */
 .main {
   flex: 1;
   display: flex;
   flex-direction: column;
   margin: 20px;
   gap: 5px;
+  height: 100%;
 }
 
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.309);
+  color: white;
+  border-radius: 20px;
+}
+
+.nav-bar-buttons {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.nav-button, .nav-button-check {
+  background-color: #F4AC5B;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.nav-button img, .nav-button-check img {
+  max-width: 24px;
+  max-height: 24px;
+  vertical-align: middle;
+}
+
+.nav-button:hover, .nav-button-check:hover {
+  background-color: rgba(229, 150, 58, 0.797);
+  transform: scale(1.05);
+}
+
+.burger-emoji-container {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  animation: moveBurgers 2s infinite alternate;
+}
+
+@keyframes moveBurgers {
+  0% {
+    transform: translateX(5);
+  }
+  100% {
+    transform: translateX(15px); /* Ajuste a distância do movimento conforme necessário */
+  }
+}
+
+.burger-emoji {
+  font-size: 40px;
+}
 
 .title {
-  font-size: 24px;
-  margin-bottom: 10px;
+  font-size: 40px;
+  margin-top: 0px; /* Adicione uma margem superior aqui */
+
 }
 
 .product-filters {
@@ -63,13 +86,14 @@ body {
 }
 
 .filter-button {
-  padding: 10px 20px;
-  border: none;
+  padding: 18px;
+  border: 2px solid white;
   background-color: black;
   color: white;
-  border-radius: 20px;
+  border-radius: 18px;
   cursor: pointer;
-  margin: 0 10px;
+  margin: 2px 8px 5px 0;
+
 }
 
 .product-container {
@@ -79,14 +103,15 @@ body {
 }
 
 .product {
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   padding: 20px;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   cursor: pointer;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
+  margin-bottom: 5px;
 }
 
 .product-name {
@@ -95,100 +120,142 @@ body {
 
 .sections-container {
   display: flex;
-  justify-content: space-between; /* Isso mantém as seções lado a lado */
+  justify-content:space-around;
   align-items: flex-start; /* Isso alinha as seções ao topo */
   gap: 20px;
 }
 
 .section-column {
-  flex: 1;
-  border-right: 1px solid #ccc;
+
+
   padding: 20px;
-  background-color: white;
+  color: white;
+
   border-radius: 10px;
   text-align: center;
+  background-color:#f4ad5b90
   
 }
 
 .section-right {
-  flex: 1;
-  border-right: 1px solid #ccc;
-  padding: 20px;
-  background-color: white;
-  border-radius: 10px;
+ flex: 1;
+  padding: 15px;
   text-align: center;
+
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.3);
   
+
 }
 
+.data-right{
+ padding: 30px;
+  background-color:rgba(0, 0, 0, 0.3) ;
+  border: 2px solid white;
+  color: #F4AC5B;
+  border-radius: 30px;
+}
 
+.trash {
+  padding: 1px;
+  color:#F4AC5B;
+  margin: 2px;
+  width: 25px;
+  background-color: #F4AC5B;
+  border-radius: 50%;
 
+}
 
+.title-resume{
+  color: #F4AC5B;
+  font-size: 20px;
+  margin-top: 0px; /* Adicione uma margem superior aqui */
+  font-weight: 400;
 
-
+}
 .summary-title {
-  font-size: 18px;
-  margin-bottom: 10px;
+  color: #F4AC5B;
+  font-size: 40px;
+  margin-top: 0px; /* Adicione uma margem superior aqui */
+  font-weight: 400;
 }
 
 .nameClient input {
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-}
-
-.order-summary {
-  padding: 10px;
-  background-color: #f0f0f0;
+  display: block;
+  text-align: left;
+  font-family: 'Righteous', cursive;
   border-radius: 10px;
+  font-size: 16px;
+  padding: 10px;
+  color: black;
+  margin-bottom: 5px;
 }
 
+.nameClient input :hover{
+  background-color: #F4AC5B;
+}
+.order-summary {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 
+.section-resume {
+  display: flex;
+  align-items: center;
+ 
+}
 
 .item-name {
   flex: 1;
-  font-weight: bold;
+  margin-right: 10px;
 }
 
-.quantity-control {
+.content-item {
   display: flex;
+  gap: 5px;
   align-items: center;
+
 }
 
 .quantity-button {
-  padding: 5px 10px;
-  border: none;
-  background-color: #f0f0f0;
+  border: 1px solid #ccc;
   cursor: pointer;
 }
 
 .item-quantity {
-  margin: 0 10px;
+  margin: 0 5px;
 }
 
 .item-price {
-  margin: 0;
-  margin-right: 10px;
+  margin-right: 0;
 }
 
-.item-remove {
-  border: none;
-  background-color: transparent;
-  color: red;
-  cursor: pointer;
-}
 
 .total {
   font-weight: bold;
   margin-top: 10px;
+  font-size: 20px;
+  color: white
+}
+
+.error-message{
+  color: greenyellow;
 }
 
 .send-button {
-  padding: 10px 20px;
+  padding: 10px 30px;
   background-color: black;
   color: white;
-  border: none;
-  border-radius: 20px;
+  align-items: center;
+  border-radius: 15px;
   cursor: pointer;
+  border: 2px solid  #F4AC5B ;
+}
+
+.send-button:hover{
+  background-color: #F4AC5B;
+  color: black;
 }
 
 .button-back {
@@ -203,18 +270,69 @@ body {
 .filter-button.active {
   background-color: white;
   color: black;
+  
+}
+@media (max-width: 600px) {
+  .main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    gap: 5px;
+  }
+
+  .nav-bar {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    color: white;
+    border-radius: 20px;
+    background-color: transparent; /* Remova o fundo */
+  }
+
+  .nav-bar-buttons {
+    flex-direction: row;
+    gap: 15px;
+    margin-bottom: 20px;
+  }
+
+  .burger-emoji {
+    display: none;
+  }
+
+  .title, .summary-title {
+    font-size: 24px;
+    margin-top: 0px;
+  }
+
+  .product-filters {
+    margin-bottom: 8px;
+  }
+
+  .filter-button {
+    padding: 10px;
+    border-radius: 14px;
+    font-size: 12px;
+  }
+
+  .sections-container {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .section-column,
+  .section-right {
+    padding: 10px;
+    font-size: 12px;
+  }
+
+  .data-right {
+    padding: 20px;
+    border: 2px solid white;
+    color: #f4ac5b;
+    border-radius: 20px;
+  }
 }
 
-
-
-/* .nav-bar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #f0f0f0;
-  padding: 10px 0;
-}
-
-.nav-button:not(:last-child) {
-  margin-right: 10px;
-} */
