--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -32,7 +32,7 @@
       <ng-container *ngIf="items.length > 0">
         <!-- <h2 class="product-title">{{ type }}</h2> -->
         <div class="product-container" *ngFor="let product of items">
-          <div class="product" (click)="moverItem(product)">
+          <div class="product" (click)="moverItem (product)" (click)="addToCart(product)">
             <p class="product-name">{{ product.name }} R$ {{ product.price }}, 00</p>
           </div>
         </div>
