--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -4,8 +4,8 @@
       <button class="nav-button" (click)="goToLogin()">
         <img src="../../../assets/sair (1).png" alt="" title="Sair">
       </button>
-      <button class="nav-button">
-        <img src="../../../assets/clock.png" alt="" title="Pedido em Espera">
+      <button class="nav-button" (click)="goToEspera()">
+        <img src="../../../assets/clock.png" alt="" title="Pedido em Espera" >
       </button>
       <button class="nav-button">
         <img src="../../../assets/correct_121331.png" alt="" title="Pedido Finalizado">
