--- a/src/app/components/kitchen/orders/orders.component.html
+++ b/src/app/components/kitchen/orders/orders.component.html
@@ -1,7 +1,51 @@
-<p>PEDIDO EM ESPERA</p>
-<div class="section-resume" *ngFor="let order of orders">
-    <p>ID do pedido: {{ order.id }}</p>
+<section class="container">
+  <div class="button-out">
+    <button class="out-button" (click)="goToLogin()">
+        <p>SAIR</p>
+    </button>
+
+</div> 
+   
+    <p class="title">PEDIDOS EM ESPERA</p>
+<div class="content-order" *ngFor="let order of orders">
+    <div class="order-div">
+        <p>ID do pedido: {{ order.id }}</p>
             <p>Atendente: {{ order.userId }}</p>
-            <p>Cliente: {{ order.client }}</p>
+            <p>Cliente: {{ order.clientName }}</p>
             <p>Data de entrada: {{ order.dateEntry | date: 'dd/MM/yyyy HH:mm:ss' }}</p>
+    </div>
+    <div class="order">
+        <div class="select-order">
+            <div class="productsQty">
+              <!-- <p>Quantidade</p> -->
+              <p class="order-p">Pedidos:</p>
+              <div class='list' *ngFor="let product of order.products">
+                <ol>
+                  <li>
+                    <p class="qty">{{ product.qty}}</p>
+                  
+                    <p class="productName">{{ product.product.name}}</p>
+                  </li>
+                </ol>
+                
+              </div>
+          </div>
+        </div>
+        <div class="finish">
+            <button class="button-finish" (click)="finishOrder(order)">CONCLUÍDO</button>
+        </div>
+        
+    </div>   
+
 </div>
+
+<div class="never-orders no-message" *ngIf="orders.length === 0">
+  <p class="fade-in">SEM PEDIDOS NO MOMENTO...</p>
+  <iframe src="https://giphy.com/embed/3o7aDbfsxYqtkHaURG" width="580" height="450" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+</div>
+
+</section>
+
+
+
+
