--- a/src/app/components/kitchen/orders/orders.component.html
+++ b/src/app/components/kitchen/orders/orders.component.html
@@ -41,7 +41,7 @@
 
 <div class="never-orders no-message" *ngIf="orders.length === 0">
   <p class="fade-in">SEM PEDIDOS NO MOMENTO...</p>
-  <iframe src="https://giphy.com/embed/3o7aDbfsxYqtkHaURG" width="580" height="450" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+  <iframe class="frame" src="https://giphy.com/embed/3o7aDbfsxYqtkHaURG" width="500" height="300" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 </div>
 
 </section>
