--- a/src/app/components/kitchen/order/order.component.html
+++ b/src/app/components/kitchen/order/order.component.html
@@ -9,7 +9,7 @@
       <button class="nav-button">
         <img src="../../../assets/clock.png" alt="" title="Pedido em Espera">
       </button>
-      <button class="nav-button-check">
+      <button class="nav-button" (click)="goToFinish()">
         <img src="../../../assets/correct_121331.png" alt="" title="Pedido Finalizado">
       </button>
       
