--- a/src/app/components/kitchen/kitchen.component.html
+++ b/src/app/components/kitchen/kitchen.component.html
@@ -7,7 +7,7 @@
       <button class="nav-button" (click)="goToEspera()">
         <img src="../../../assets/clock.png" alt="" title="Pedido em Espera" >
       </button>
-      <button class="nav-button">
+      <button class="nav-button" (click)="goToFinish()">
         <img src="../../../assets/correct_121331.png" alt="" title="Pedido Finalizado">
       </button>
     </nav>
