--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
 
-body{
+*{
     margin: 0; 
     padding: 0;
-    background-color: #8B4513;
     font-family: 'Righteous', cursive;
 }
 
-@media (min-width: 992px) {
+body{
+    background-color: #8B4513;
+}
+
+/* @media (min-width: 992px) {
     body{
         overflow: hidden;
     }
-}
+} */
